--- a/style.css
+++ b/style.css
@@ -1,16 +1,36 @@
+body{
+  background-color: #fafafa
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #707070;
+}
+
+
 .container{
   width: 95%;
+  max-width: 600px;
 }
 
 .header {
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+}
+
+.encabezado{
+  font-size: 40px;
+  font-weight: bold;
+}
+.fa-money-check-alt{
+  color: #61D580;
+}
+.tagline{
+  font-size: 18px;
+  font-weight:normal;
 }
 .selector {
   box-sizing: border-box;
   border: 1px solid black;
   padding: 5px;
-  width: 49%;
+  width: 50%;
 }
 .highlight {
   color: white;
@@ -22,17 +42,38 @@
 }
 
 .controls{
+
+width: 100%;
+margin: auto;
+margin-bottom: 15px;
 display: flex;
 justify-content: space-around;
+font-weight: bold;
 
 }
 
+
+.botones-eq, .botones-cus{
+  margin-right: 0px;
+  float: right;
+  margin-bottom: 15px;
+}
+
+.btn-danger{
+  border: #dc3545 1px solid;
+  background-color: white;
+  color: #dc3545;
+
+
+}
 
 input {
   width: 95%;
 }
 
 hr {
-  width: 95%;
+  width: 100%;
+  
+  
 }
 
